--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,36 @@
     transform: rotate(360deg);
   }
 }
+.home {
+  padding-left: 100px;
+  width: 25%;
+  border: 5px solid black;
+  border-radius: 20px;
+  cursor: pointer;
+  padding: 10px;
+  margin: 20px;
+  text-align: center;
+  margin: auto;
+  /* vertical-align: middle; */
+}
+.home-name {
+  display: inline-flex;
+  padding-left: 10px 0px;
+  text-align: center;
+}
+.home-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
+.container{
+  padding-top: 100px;
+  margin: 20px;
+  text-align: center;
+  margin: auto;
+  padding-bottom: 20px;
+}
+.img{
+  padding: 20px;
+}
